--- a/cv.css
+++ b/cv.css
@@ -9,10 +9,11 @@ body {
 /* Style the header */
 header {
   background-color: #666;
-  padding: 30px;
+  padding: 15px;
   width: auto;
+  height: 300px;
   text-align: center;
-  font-size: 35px;
+  font-size: 20px;
   color: white;
 }
 
@@ -24,9 +25,9 @@ section {
 
 /* Style the navigation menu */
 nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-flex: 0.6;
+  -ms-flex: 0.6;
+  flex: 0.6;
   background: #ccc;
   padding: 20px;
 }
@@ -56,11 +57,17 @@ footer {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
-  section {
+  .section2 {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .conteneur {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
 }
+
 
 
 .page{
@@ -72,28 +79,21 @@ footer {
 }
 
 .conteneurheader{
-  height: 350px;
-}
-
-.info{
-  float: left;
-}
-.liens{
-  float: center;
-}
-
-.photo{
-  float: right;
+  margin-bottom: 30px;
+  text-align: justify;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 .section2{
   margin-bottom: 70px;
   text-align: justify;
-  -webkit-flex; /* Safari */
-  -webkit-flex-wrap: wrap; /* Safari 6.1+ */
+  height: 100%;
+  width: 50%;
   display: flex;
-  flex-wrap: wrap;
-  }
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 .sec-gauche{
@@ -149,32 +149,34 @@ h2{
 }
 
 strong{
-  font-size: 22px;
+  font-size: 30px;
+  color: blue;
+  font-style: bold;
 }
 
 #conteneur{
   display: flex;
   flex-wrap: wrap;
-  }
-
-.formation{
-  width: 80%;
-  height: auto;
-  background-color: green;
-  border-radius: 10px;
-  padding: 20px;
 }
 
 .experiences{
-  width: 80%;
+  width: 90%;
   height: auto;
   background-color: red;
   border-radius: 10px;
   padding: 20px;
 }
 
+.formation{
+  width: 90%;
+  height: auto;
+  background-color: green;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 .competences{
-  width: 80%;
+  width: 90%;
   height: auto;
   background-color: yellow;
   border-radius: 10px;
@@ -182,7 +184,7 @@ strong{
 }
 
 .publications{
-  width: 80%;
+  width: 90%;
   height: auto;
   background-color: blue;
   border-radius: 10px;
