--- a/cv.css
+++ b/cv.css
@@ -1,123 +1,197 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 15px;
+  width: auto;
+  height: 300px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+}
+
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Style the navigation menu */
+nav {
+  -webkit-flex: 0.6;
+  -ms-flex: 0.6;
+  flex: 0.6;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+/* Style the content */
+article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  .section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .conteneur1, .conteneur2, .conteneur3 {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+/* Style the photo   */
+.img-responsive{
+  display: block;
+  max-width: 50%;
+  height: auto;
+}
+
+
+/* Style the footer */
 .page{
-    width: 100%;
-    margin: auto;
-    font-family: 'Indie Flower', cursive;
-    font-size: 14px;
-    border: 5px solid #3388cc;
-    border-radius: 10px;
-    box-shadow: 2px 3px 4px black;
-    padding: 20px;
+  width: 100%;
+  margin: auto;
+  font-family: 'Indie Flower', cursive;
+  font-size: 14px;
+  padding: 20px;
 }
 
-.infophotoliens{
-    height: 250px;
-}
-
-.info{
-    float: left;
-}
-.liens{
-    float: center;
-}
-
-.photo{
-    float: right;
-}
-
-.section{
-    margin-bottom: 70px;
-    text-align: justify;
+.conteneurheader{
+  margin-bottom: 30px;
+  text-align: justify;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 .sec-gauche{
-    float: left;
-    font-weight: bold;
-    font-size: 16px;
+  float: left;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .sec-droite{
-    margin-left: 150px;
-    margin-top: 40px;
+  margin-left: 150px;
+  margin-top: 40px;
 }
 
 h2{
-    font-size: 20px;
-    color: #3388bb;
-    border-bottom: 3px solid #3388dd;
+  font-size: 20px;
+  color: #3388bb;
+  border-bottom: 3px solid #3388dd;
 }
 
 .duree{
-    font-weight: normal;
-    font-style: italic;
-    font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+  font-size: 14px;
 }
 
 .titre{
-    font-weight: bold;
-    font-size: 16px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 #forma-gauche p{
-    margin-bottom: 55px;
+  margin-bottom: 55px;
 }
 
 #exp-gauche p{
-    margin-top: 29px;
+  margin-top: 29px;
 }
 
 #lang-droite-sub{
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 #lang-droite{
-    line-height: 20px;
+  line-height: 20px;
 }
 
 #interet-droite{
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 #interet-droite-int{
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 strong{
-    font-size: 22px;
+  font-size: 30px;
+  color: blue;
+  font-style: bold;
 }
 
-#conteneur1{
-    display: flex;
-    flex-wrap: wrap;
-    }
+/* section pour experiences, formation, competences, publications */
+.art{
+  margin-bottom: 35px;
+  text-align: justify;
+  width: 80%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
 
-.formation{
-    width: 80%;
-    height: auto;
-    background-color: green;
-    border-radius: 10px;
-    padding: 20px;
+#conteneur1, #conteneur2, #conteneur3{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
 .experiences{
-    width: 80%;
-    height: auto;
-    background-color: red;
-    border-radius: 10px;
-    padding: 20px;
+  width: 90%;
+  background-color: red;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.formation{
+  width: 90%;
+  background-color: green;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 .competences{
-    width: 80%;
-    height: auto;
-    background-color: yellow;
-    border-radius: 10px;
-    padding: 20px;
+  width: 90%;
+  background-color: yellow;
+  border-radius: 10px;
+  padding: 20px;
 }
 
 .publications{
-    width: 80%;
-    height: auto;
-    background-color: blue;
-    border-radius: 10px;
-    padding: 20px;
+  width: 90%;
+  background-color: blue;
+  border-radius: 10px;
+  padding: 20px;
 }
+
+
