--- a/cv.css
+++ b/cv.css
@@ -4,7 +4,6 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-<<<<<<< HEAD
 }
 
 /* Style the header */
@@ -85,101 +84,12 @@ footer {
   padding: 20px;
 }
 
-=======
-}
-
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 15px;
-  width: auto;
-  height: 300px;
-  text-align: center;
-  font-size: 20px;
-  color: white;
-}
-
-/* Container for flexboxes */
-section {
-  display: -webkit-flex;
-  display: flex;
-}
-
-/* Style the navigation menu */
-nav {
-  -webkit-flex: 0.6;
-  -ms-flex: 0.6;
-  flex: 0.6;
-  background: #ccc;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-/* Style the content */
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  background-color: #f1f1f1;
-  padding: 10px;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .section2 {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-
-  .conteneur {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
-
-
-.page{
-  width: 100%;
-  margin: auto;
-  font-family: 'Indie Flower', cursive;
-  font-size: 14px;
-  padding: 20px;
-}
-
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
 .conteneurheader{
   margin-bottom: 30px;
   text-align: justify;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-<<<<<<< HEAD
-=======
-}
-
-.section2{
-  margin-bottom: 70px;
-  text-align: justify;
-  height: 100%;
-  width: 50%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
 }
 
 .sec-gauche{
@@ -190,13 +100,18 @@ footer {
 
 .sec-droite{
   margin-left: 150px;
-  margin-top: 40px;
+  margin-top: 35px;
+  line-height: 1.6;
+}
+
+#exp-gauche p{
+  margin-top: 3px;
 }
 
 h2{
-  font-size: 20px;
-  color: #3388bb;
-  border-bottom: 3px solid #3388dd;
+  font-size: 24px;
+  color: #536dfe;
+  border-bottom: 3px solid #536dfe;
 }
 
 .duree{
@@ -211,11 +126,8 @@ h2{
 }
 
 #forma-gauche p{
-  margin-bottom: 55px;
-}
-
-#exp-gauche p{
-  margin-top: 29px;
+  margin-bottom: 40px;
+  line-height: 1.7;
 }
 
 #lang-droite-sub{
@@ -240,7 +152,6 @@ strong{
   font-style: bold;
 }
 
-<<<<<<< HEAD
 /* section pour experiences, formation, competences, publications */
 .art{
   margin-bottom: 35px;
@@ -255,19 +166,10 @@ strong{
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-=======
-#conteneur{
-  display: flex;
-  flex-wrap: wrap;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
 }
 
 .experiences{
   width: 90%;
-<<<<<<< HEAD
-=======
-  height: auto;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
   background-color: red;
   border-radius: 10px;
   padding: 20px;
@@ -275,10 +177,6 @@ strong{
 
 .formation{
   width: 90%;
-<<<<<<< HEAD
-=======
-  height: auto;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
   background-color: green;
   border-radius: 10px;
   padding: 20px;
@@ -286,10 +184,6 @@ strong{
 
 .competences{
   width: 90%;
-<<<<<<< HEAD
-=======
-  height: auto;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
   background-color: yellow;
   border-radius: 10px;
   padding: 20px;
@@ -297,21 +191,9 @@ strong{
 
 .publications{
   width: 90%;
-<<<<<<< HEAD
-=======
-  height: auto;
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
   background-color: blue;
   border-radius: 10px;
   padding: 20px;
 }
 
-<<<<<<< HEAD
 
-=======
-.img-responsive{
-  display: block;
-  max-width: 50%;
-  height: auto;
-}
->>>>>>> faf2b956f0059d369bcf4e69ee738d318379eee1
