--- a/cv.css
+++ b/cv.css
@@ -4,11 +4,16 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  height: 200px;
+  background-color: #cccccc;
+  /* background-image: url(website/Memento/assets/img/background.jpeg); */
+  background: #FF9500;
 }
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color: #FF7B00;
+  border-radius: 10px;
   padding: 15px;
   width: auto;
   height: 300px;
@@ -28,7 +33,8 @@ nav {
   -webkit-flex: 0.6;
   -ms-flex: 0.6;
   flex: 0.6;
-  background: #ccc;
+  background: #FFE400;
+  border-radius: 10px;
   padding: 20px;
 }
 
@@ -43,32 +49,23 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
   padding: 10px;
 }
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #FF9500;
+  border-radius: 10px;
   padding: 10px;
   text-align: center;
   color: white;
 }
 
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .section {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-
-  .conteneur1, .conteneur2, .conteneur3 {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
 /* Style the photo   */
 .img-responsive{
+  box-shadow: 4px 8px 20px;
+  border-radius: 30px;
   display: block;
   max-width: 50%;
   height: auto;
@@ -244,3 +241,17 @@ progress[value]::-webkit-progress-value {
     border-radius: 2px; 
     background-size: 35px 20px, 100% 100%, 100% 100%;
 }
+
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  .section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .conteneur1, .conteneur2, .conteneur3 {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+
